# spaceship_bubble

./: .gitignore  .mcp.json  .zenodo.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PROGRESS.md  PROGRESS_ARCHIVE.md  README.md  VERIFICATION_REPORT.md  analyze.py  main.py  project_map.html  pyproject.toml  setup.sh  sync_assets.py
.claude/: settings.json
.claude/hooks/: auto-gitnexus-analyze.cjs
.github/workflows/: publish_casimir_tools.yml  test_casimir_tools.yml  test_physics.yml
casimir_tools/: Makefile  README_PKG.md  __init__.py  _core.py  pyproject.toml
casimir_tools/casimir_tools/: __init__.py  _core.py  _materials.py
casimir_tools/tests/: conftest.py  test_core.py  test_materials.py
dashboard/: LAUNCH.md  README.md  index.html  package-lock.json  package.json  server.py
dashboard/public/data/: pareto_results.json
dashboard/src/: App.css  App.jsx  index.css
dashboard/src/components/: CasimirScene.jsx
data/: td_wte2_dft.json  tellurium.json  wte2.json
docs/: cover_letter.md  ieee_draft_outline.md  serb_proposal_draft.md  submission_checklist.md
scripts/: post-commit.sh  project_map.html  update_claude_md.py
src/: fetch_materials.py  lifshitz.py  optimizer.py  visualize.py
tests/: conftest.py  test_lifshitz.py
