[project]
name = "spaceship-bubble"
version = "0.1.0"
description = "AI-driven Casimir stiction-suppressing chiral Tellurium metamaterials research pipeline — Lifshitz engine, NSGA-II optimizer, and React dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "matplotlib>=3.10.8",
    "mp-api>=0.46.0",
    "numpy>=2.4.4",
    "pymatgen>=2026.3.23",
    "pymoo>=0.6.1.6",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "uvicorn>=0.43.0",
    "casimir-tools>=0.1.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.4",
]

[tool.uv.workspace]
members = [
    "casimir_tools",
]

[tool.uv.sources]
casimir-tools = { workspace = true, editable = true }

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — handled by formatter
    "E731",   # lambda assignment — common pattern in scientific integration callbacks
    "E702",   # semicolon — used for paired physics assignments (ep1; ea1)
]
