[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "casimir-tools"
version     = "0.1.0"
description = "Open-source toolkit for Lifshitz-Casimir force engineering in anisotropic and chiral dielectric heterostructures"
readme      = "README_PKG.md"
license     = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Sevesh SS", email = "sevesh@kec.edu.in" },
]
keywords = [
    "Casimir force", "Lifshitz theory", "van der Waals", "MEMS", "NEMS",
    "chiral metamaterials", "quantum vacuum", "stiction", "dielectric",
    "Tellurium", "WTe2", "nanotechnology",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.6"]
dev  = ["pytest>=7", "ruff", "mypy"]

[project.urls]
Homepage      = "https://github.com/seveshss/casimir-tools"
Repository    = "https://github.com/seveshss/casimir-tools"
Documentation = "https://casimir-tools.readthedocs.io"
"Bug Tracker" = "https://github.com/seveshss/casimir-tools/issues"

[tool.hatch.build.targets.wheel]
packages = ["casimir_tools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict         = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
